[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "purecache"
version = "0.1.0"
description = "Async-native in-memory cache with pluggable eviction backends. Pure Python, zero dependencies."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = []

authors = [{ name = "Maksim Smirnoff", email = "smirnoffmg@gmail.com" }]

keywords = [
    "cache",
    "lru",
    "lfu",
    "ttl",
    "asyncio",
    "async",
    "in-memory",
    "system-design",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/pure-python-system-design/purecache"
Documentation = "https://pure-python-system-design.github.io/purecache/"
Repository = "https://github.com/pure-python-system-design/purecache"
"Bug Tracker" = "https://github.com/pure-python-system-design/purecache/issues"
Changelog = "https://github.com/pure-python-system-design/purecache/releases"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest-asyncio",
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.4.0",
    "pytest-benchmark>=5.2.3",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
packages = ["purecache"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["src"]
asyncio_mode = "auto"
